# raytracer-rust

./: Cargo.toml  README.md
src/: lib.rs
src/rsrt/: camera.rs  math.rs  mod.rs  ray.rs  renderer.rs  vec3.rs  world.rs
src/rsrt/material/: dielectric.rs  hit.rs  lambertian.rs  material.rs  metal.rs  mod.rs
src/rsrt/shape/: mod.rs  plane.rs  shape.rs  sphere.rs  triangle.rs
