[package]
name = "raytracer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
rand_xoshiro = "0.6.0"
lazy_static = "1.4.0"
image = "0.24.4"
enum_dispatch = "0.3.8"

[profile.release]
debug = 1
